--- a/bio.html
+++ b/bio.html
@@ -33,7 +33,7 @@
                 <h2>
                     Como trabalho
                 </h2>
-                <blockquote class="citacao float-right">
+                <blockquote class="citacao"  tabindex=1>
                     <p>
                         João é o melhor desenvolvedor front-end com quem já trabalhei. 
                         Muito eficiente e muito capaz. Recomendo sem dúvidas!
@@ -53,7 +53,7 @@
                 <h2>
                     Experiência
                 </h2>
-                <blockquote class="citacao float-left">
+                <blockquote class="citacao"  tabindex=1>
                     <p>
                         João domina as tecnologias como ninguém. Eu apresentava um problema, 
                         ele tinha na ponta da língua a solução mais adequada com as tecnologias mais recentes.
@@ -88,13 +88,13 @@
         <aside class="navegacao">
             <h1>Samuel L.<br>Jackson</h1>
             <nav>
-            <ul class="navigation">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="bio.html">Sobre mim</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="contato.html">Contato</a></li>
-            </ul>
+                <ul>
+                    <li class="item-nav"><a href="index.html">Home</a></li>
+                    <li class="item-nav"><a href="portfolio.html">Portfolio</a></li>
+                    <li class="item-nav"><a href="bio.html">Sobre mim</a></li>
+                    <li class="item-nav"><a href="blog.html">Blog</a></li>
+                    <li class="item-nav"><a href="contato.html">Contato</a></li>
+                </ul>
             <ul class="icones-sociais">
                 <li> <a id="github" href="https://github.com"> GitHub </a> </li>
                 <li> <a id="twitter" href="https://twitter.com"> Twitter </a> </li>
@@ -103,7 +103,7 @@
             </nav>
         </aside>
         <footer class="rodape-site">
-            &copy; Samuel L. Jackson 2018
+            <span class="texto-rodape">&copy; Samuel L. Jackson 2018</span>
         </footer>
     </body>
 </html>
