correção calss class

--- a/bio.html
+++ b/bio.html
@@ -95,11 +95,11 @@
                     <li class="item-nav"><a href="blog.html">Blog</a></li>
                     <li class="item-nav"><a href="contato.html">Contato</a></li>
                 </ul>
-            <ul class="icones-sociais">
-                <li> <a id="github" href="https://github.com"> GitHub </a> </li>
-                <li> <a id="twitter" href="https://twitter.com"> Twitter </a> </li>
-                <li> <a id="linkedin" href="https://linkedin.com"> LinkedIn </a> </li>
-            </ul>
+                <ul class="icones-sociais">
+                    <li> <a class="social-icon github" data-subtitle="Veja minhas contribuições" href="https://github.com"> GitHub </a> </li>
+                    <li> <a class="social-icon twitter" data-subtitle="Me siga no Twitter" href="https://twitter.com"> Twitter </a> </li>
+                    <li> <a class="social-icon linkedin" data-subtitle="Me siga no LinkedIn" href="https://linkedin.com"> LinkedIn </a> </li>
+                </ul>
             </nav>
         </aside>
         <footer class="rodape-site">
