--- a/bio.html
+++ b/bio.html
@@ -17,7 +17,7 @@
         <header class="page-header">
             <h1>Sobre mim</h1>
         </header>
-        <main class="float-right">
+        <main class=" ">
             <div class="container">
                 <p>
                     Moro em São Paulo mas atendo clientes do mundo todo. 
